Fix repository error in source creation
Owing to the changes to repository creation (label don't include types), the type of the repository now has to be called with another Rest request in ScmManagerSource.java.

Furthermore, Java 11 was removed from Jenkins (attempt to fix Jenkins build) and a Jelly file relabeled.